<resources>

    <string name="app_name">WITSelfie Competition</string>
    <string name="prompt_fName">First Name</string>
    <string name="prompt_lName">Last Name</string>
    <string name="about_info">Write pertinent information about your life. Focus on your interests, hobbies and accomplishments and include any quotes that inspire you.</string>
    <string name="save">Save</string>
    <string name="join">Join</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_to_selfie">New to WIT Selfie Competition?</string>
    <string name="type_your_email">Type your email here</string>
    <string name="create_account"><b>Create an Account.</b></string>
    <string name="reset_password">Reset Password</string>
    <string name="change_password">Update Password</string>
    <string name="register">Register</string>
    <string name="profile_setup">Profile Setup</string>
    <string name="splashTitle">WIT Selfie Competition</string>
    <string name="title_activity_main">Main</string>
    <string name="gender">Gender</string>
    <string name="prompt_courses">Choose Your Course</string>
    <string name="take_pic">Take Picture</string>
    <string name="upload_pic">Upload Picture</string>
    <string name="search">Search</string>
    <string name="about_me">About Me</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="full_name">Your Full Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_out">Sign Out</string>
    <string name="click_on_image_to_change">click on image to change</string>
    <string name="change_header">Change Header Theme</string>
    <string name="close_account">Close Account</string>
    <string name="themes">Available Colors</string>
    <string name="about">About WIT Selfie Competition</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_password">Repeat New Password</string>
    <string name="app_theme">Change Theme</string>
    <string name="delete_account">Delete Account</string>
    <string name="about_app">\nThis Selfie Competition application meant to add some social value to the students’ life
        in Waterford Institute of Technology via having some constructive fun and leaving good memories.\n
        Please use it respectfully!\n\n\n
    Developed By: Yahya Almardeny.\nAll Rights Reserved 2018.\n</string>

    <string name="show_profile">Show Profile</string>
    <string name="report_pic">Report</string>
    <string name="delete_pic">Delete</string>
    <string name="first_submit">Be the first who submit a selfie in this competition</string>
    <string name="image_deleted">Oops! This image has been deleted by the user</string>
    <string name="details_pic">Details</string>
    <string name="save_image">Save</string>
    <string name="select">Select Image</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="close">Close</string>
    <string name="details">Details</string>
    <string name="competition">Competition:</string>
    <string name="date">Date:</string>
    <string name="likes">Likes:</string>


</resources>
