<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/WitTheme"
    tools:context="ie.wit.witselfiecompetition.Login"
    tools:layout_editor_absoluteY="50dp">


    <TextView
        android:id="@+id/signInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_45sdp"
        android:fontFamily="cursive"
        android:text="@string/sign_in"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/_35ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:background="@drawable/edit_text"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLength="25"
        android:singleLine="true"
        android:textColor="@color/input"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInTextView" />


    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/edit_text"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/input"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/hyperlink"
        android:textSize="@dimen/_12ssp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />


    <Button
        android:id="@+id/signInButton"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:background="@drawable/round_button"
        android:text="@string/sign_in"
        android:textColor="@color/splashTitle"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTextView" />

    <ProgressBar
        android:id="@+id/signInProgressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTextView"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/newTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_65sdp"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="casual"
        android:text="@string/new_to_selfie"
        android:textColor="@color/splashTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton"/>

    <TextView
        android:id="@+id/createAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_3sdp"
        android:fontFamily="casual"
        android:text="@string/create_account"
        android:textColor="@color/hyperlink"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTextView" />


</android.support.constraint.ConstraintLayout>
