<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="ie.wit.witselfiecompetition.Main">


        <RelativeLayout
            android:id="@+id/changeHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_75sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            android:clickable="true"
            android:focusable="true">
                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/headerColors"
                    android:layout_width="@dimen/_190sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@android:color/transparent"
                    android:spinnerMode="dropdown"
                    android:visibility="invisible"
                    android:layout_centerInParent="true"/>

            <TextView
                android:id="@+id/appTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="sans-serif"
                android:text="@string/app_theme"
                android:textAlignment="center"
                android:textColor="@color/splashTitle"
                android:textSize="@dimen/_16ssp" />
        </RelativeLayout>

    <Button
        android:id="@+id/changePassword"
        android:layout_width="@dimen/_190sdp"
        android:layout_height="@dimen/_39sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:fontFamily="sans-serif"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:textColor="@color/splashTitle"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changeHeader" />

    <Button
        android:id="@+id/closeAccount"
        android:layout_width="@dimen/_190sdp"
        android:layout_height="@dimen/_39sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:fontFamily="sans-serif"
        android:text="@string/close_account"
        android:textAllCaps="false"
        android:textColor="@color/splashTitle"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePassword" />


    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="casual"
        android:text="@string/about"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>