<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ie.wit.witselfiecompetition.Main">

    <TextView
        android:id="@+id/profileSetupTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:fontFamily="cursive"
        android:text="@string/profile_setup"
        android:textStyle="bold"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/edit_text"
        android:hint="@string/prompt_fName"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="@color/input"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileSetupTextView"/>

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/edit_text"
        android:hint="@string/prompt_lName"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="@color/input"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEditText" />

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_23sdp"
        android:layout_marginLeft="@dimen/_40sdp"
        android:text="@string/gender"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameEditText"/>

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/genderTextView"
        app:layout_constraintTop_toBottomOf="@+id/lastNameEditText" >

        <RadioButton
            android:id="@+id/maleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/input"
            android:textSize="@dimen/_13ssp"
            android:layout_weight="1"
            android:buttonTint="@color/splashTitle"
            android:text="Male" />

        <RadioButton
            android:id="@+id/femaleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/splashTitle"
            android:text="Female"
            android:textColor="@color/input"
            android:textSize="@dimen/_13ssp" />
    </RadioGroup>


    <Button
        android:id="@+id/joinButton"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:background="@drawable/round_button"
        android:text="@string/join"
        android:textColor="@color/splashTitle"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup"  />

    <ProgressBar
        android:id="@+id/profileSetupProgressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup"
        tools:visibility="invisible" />



</android.support.constraint.ConstraintLayout>